--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="example-tree" #treeSelector>
+
+<app-header></app-header>
+<main>
+  <router-outlet></router-outlet>
+</main>
+<!-- <app-error *ngIf="hasError"></app-error> -->
+
+<!-- <mat-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl" class="example-tree" #treeSelector>
 	<mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
 		<li>
 			<div class="mat-tree-node">
@@ -33,4 +40,4 @@
     <li><label>Price: <input class="formField" style="width:100%;" type="text" id="Price" placeholder="Price"></label></li>
     <button type="submit" (click)="submitAttribute()">Submit</button>
   </form>
- </div>
+ </div> -->
