--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,7 @@
+mat-toolbar {
+  background-color: darkcyan;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -15,4 +19,19 @@ ul {
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.header-text {
+  font-size: 30px
+}
+
+.mat-button:hover {
+  font-size: 20px;
+}
+
+.list {
+  display: none;
+}
+.link:hover + .list {
+  display: block;
 }
